--- a/templates/student/flames/view_registration.html
+++ b/templates/student/flames/view_registration.html
@@ -148,9 +148,8 @@ active
 
                     <div class="d-flex justify-content-between mb-3">
                         <span>Subtotal</span>
-                        <span>₹{{ registration.original_price }} × 5 = ₹{{
-                            registration.original_price|add:registration.original_price|add:registration.original_price|add:registration.original_price|add:registration.original_price
-                            }}</span>
+                        <span>₹{{ registration.original_price }} × 5 = ₹
+                            {{ registration.original_price|add:registration.original_price|add:registration.original_price|add:registration.original_price|add:registration.original_price }}</span>
                     </div>
 
                     <div class="d-flex justify-content-between mb-3">
